it's a richtext so you add <i> </i> or <b> </b> .
So text is in italic or bold.

1999-09-20 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add now function REPT
-When you selection a text in editWidget and first character egal to !
and you click on bold or italic you add <b> </b> or <i> </i>
-Start improved of special paste => operation add ,mult etc...

1999-09-21 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now Special paste =>operation ,works
-Reggie had a good idea to add a Toolbar for formula, So I had it
and now when you create formula with kformula widget a toolbar appear.
-Now when you doubleclick on cell you create a new cell with old text
inside so you can add text in this cell.

1999-09-22 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Bug fix : Now when you insert or remove column or row,there is recalculing
-Add new button on formula toolbar (SUM and Product)
-bugfix
-Now you can copy a function with "

1999-09-23 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can create a area when you click and press CTRL
-Add new dialog box for resize column or row

1999-09-24 -Montel laurent<montell@club-internet.fr>
-----------------------------------------------------       
-Improved function resize now you can resize a area
	format->Row->height
	format->Column->Width
-bugfix

1999-09-25 -Montel laurent<montell@club-internet.fr>
-----------------------------------------------------
-Now you can hide different tables
         format->table->hide
         format->table->show
and it's saving.

1999-09-26 -Montel laurent<montell@club-internet.fr>
-----------------------------------------------------
-Improved Special paste now you can paste only value.
-You can ajust column when it's text (for the moment Virtual formual
and QML don't work)